<resources>
    <string name="app_name">Calculadora</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="ln">ln</string>
    <string name="log">log</string>

    <string name="exclamacao">!</string>
    <string name="pi">π</string>
    <string name="e">e</string>
    <string name="parentese_esq">(</string>
    <string name="parentese_dir">)</string>

    <string name="raiz">√</string>
    <string name="potencia">ˆ</string>
    <string name="i">i</string>
    <string name="X">X</string>

    <string name="zero">0</string>
    <string name="um">1</string>
    <string name="dois">2</string>
    <string name="tres">3</string>
    <string name="quatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="sete">7</string>
    <string name="oito">8</string>
    <string name="nove">9</string>

    <string name="soma">+</string>
    <string name="sub">-</string>
    <string name="mult">x</string>
    <string name="div">÷</string>

    <string name="ponto">.</string>
    <string name="del">DEL</string>
    <string name="igual">=</string>
</resources>